--- a/ajax/api2.html
+++ b/ajax/api2.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <h1 class="text-center">FETCH API</h1>
+    <h1 class="text-center">Corona Cases</h1>
 
     <div class="container text-center">
       <button class="btn btn-primary" id="btn1">print</button>
