read csv file in svelte

--- a/ajax/ajax3.html
+++ b/ajax/ajax3.html
@@ -8,14 +8,14 @@
     <style>
       .user {
         display: flex;
-        background: #dad1d1;
+        /* background: #dad1d1; */
         padding: 10px;
         margin-bottom: 10px;
       }
 
       .user ul {
         list-style: none;
-        /* background: rgb(187, 184, 19); */
+        background: rgb(187, 184, 19);
       }
     </style>
   </head>
